# Pong

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: CMakeLists.txt  app_state.h  class.h  game_object.h  gl_context.h  observer.h  pong_scene.h  sdl_renderer.h  test.h  window.h
include/game_objects/: ai_controller.h  ball.h  box_collision.h  game_object.h  paddle.h  player_controller.h  pong_scene.h
include/levels/: level.h  pong_level.h  pong_scene.h  scene.h
include/objects/: game_state.h  object.h  object_pointer.h  spawn_point.h
include/objects/controllers/: ai_controller.h  ai_paddle_controller.h  controller.h  paddle_player_controller.h  player_controller.h
include/objects/game_objects/: ball.h  game_object.h  paddle.h  walls.h
include/rhi/: gl_context.h  renderer.h  sdl_renderer.h
include/utility/: Pong_utility.h
pch/: pch.h
src/: ai_controller.cpp  ai_paddle_controller.cpp  app_state.cpp  ball.cpp  box_collision.cpp  class.cpp  controller.cpp  game_object.cpp  game_state.cpp  gl_context.cpp  level.cpp  main.cpp  object.cpp  paddle.cpp  paddle_player_controller.cpp  player_controller.cpp  pong_level.cpp  pong_scene.cpp  renderer.cpp  scene.cpp  sdl_renderer.cpp  spawn_point.cpp  walls.cpp  window.cpp
